2004-11-20  Zoltan Varga  <vargaz@freemail.hu>

	* MonoType.cs: Revert last change since it breaks remoting.

2004-11-18  Zoltan Varga  <vargaz@freemail.hu>

	* MonoType.cs (UnderlyingSystemType): Make this return this as in
	MS.NET. Fixes #56245.

2004-11-17  Carlos Alberto Cortez <carlos@unixmexico.org>

	* INullable.cs: New interface added.
	* Nullable.cs: Methods added. Also a static Nullable class
	containing static methods.
	
2004-11-15  Sebastien Pouliot  <sebastien@ximian.com>

	* BitConverter.cs: Added support for special case when ToString is 
	called with (new byte [0]).

2004-11-10  Lluis Sanchez  <lluis@novell.com>

	* Exception.cs: Added setter for StackTrace.

2004-11-07  Ben Maurer  <bmaurer@ximian.com>

	* IntegerFormatter.cs: Avoid .ToCharArray

2004-11-06  Ben Maurer  <bmaurer@ximian.com>

	* Single.cs, Double.cs (GetHashCode): Better hashcode impl

2004-11-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* InvalidOperationException.cs: make the message more meaningful and
	real. Fixes bug #69055.

2004-10-28  Ben Maurer  <bmaurer@ximian.com>

	* String.cs: Rather than == String.Empty, use .Length == 0. It
	is a bit faster (avoids a method call, and the code is less complex).

2004-10-24  Fawad Halim  <fawad@fawad.net>
	* Environment.cs: If an Environment variable value isn't found, leave the trailing % of the reference for further matches.
	Add text between end of current lookup window and next % match if we just got a match, or add all text to the end if there are no further % matches.
	This fixes bug #64995.

2004-10-19  Lluis Sanchez  <lluis@novell.com>

	* MarshalByRefObject.cs: Field _identity is not serializable.
	This fixes bug #68567.

2004-10-17  Ben Maurer  <bmaurer@ximian.com>

	* DateTime.cs (ZeroPad): Use unsafe code to speed this up. We
	avoid entering slow integer formatting code.

	(_ToString): Use ZeroPad here when possible, as it is faster.

2004-10-11  Martin Baulig  <martin@ximian.com>
