@@ -1,3 +1,7 @@
+2004-11-23  Marek Safar  <marek.safar@seznam.cz>
+
+	* Decimal.cs: Updated to use compiler decimal constant support.
+
 2004-11-20  Zoltan Varga  <vargaz@freemail.hu>
 
 	* MonoType.cs: Revert last change since it breaks remoting.
